# rust-racer

./: Cargo.toml  README.md
art/: game.blend  game.blend1
assets/levels/: World.gltf
src/: car.rs  components.rs  controller_avian.rs  dialog.rs  fps_controller.rs  input.rs  interact.rs  main.rs  track.rs
src/scenes/: main_menu.rs  mod.rs  options.rs  prologue.rs  splash.rs
