[package]
name = "racing"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = { version = "0.16", default-features = true, features = [
	"bevy_animation",
	"bevy_asset",
	"bevy_core_pipeline",
	"bevy_state",
	"bevy_gltf",
	"bevy_gizmos",
	"bevy_pbr",
	"bevy_render",
	"bevy_scene",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
	"bevy_winit",
	"multi_threaded",
	"png",
] }
avian3d = "0.3"
bevy_egui = "0.36"
bevy_framepace = "0.19"
bevy_atmosphere = "0.13"
bevy_skein = "0.2.1"



